--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,32 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
+  <h1>Welcome to the Assessment!</h1>
+  <p>Event Management or something</p>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
+<h3>Login</h3>
+<%= @error_login if @error_login %>
+<p></p>
+<form action="/sign_in" method="POST">
+  <label for="email">email:</label>
+  <input type="text" name="user[email]" placeholder="username here"><br>
+  <label for="password">password:</label>
+  <input type="password" name="user[password]" placeholder="password here"><br>
+  <input type="submit" value="Sign In">
+</form>
+<p></p>
+<h3>Sign Up</h3>
+<%= @error_signup if @error_signup %>
+<p></p>
+<form action="/sign_up" method="POST">
+  <label for="first_name">First Name: </label>
+  <input type="text" name="user[first_name]" placeholder="username here"><br>
+    <label for="last_name">Last Name: </label>
+  <input type="text" name="user[last_name]" placeholder="username here"><br>
+    <label for="email">Email: </label>
+  <input type="text" name="user[email]" placeholder="username here"><br>
+    <label for="birthdate">Birthdate: </label>
+  <input type="text" name="user[birthdate]" placeholder="username here"><br>
+  <label for="password">password:</label>
+  <input type="password" name="user[password]" placeholder="password here"><br>
+  <input type="submit" value="create account">
+</form>
 </div>
