--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,6 +12,14 @@
   <title></title>
 </head>
 <body>
-  <%= yield %>
+  <nav>
+    <% if current_user %>
+      <a href="/user/home">Home</a> |
+      <a href="/log_out">Log Out</a>
+    <% end %>
+  </nav>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
